--- a/src/com/whatsup/db/db.properties
+++ b/src/com/whatsup/db/db.properties
@@ -1,4 +1,4 @@
-dirver=oracle.jdbc.driver.Oracle.Driver
+dirver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@qclass.iptime.org:1521:xe
 username=master03_semi
 password=semi
